--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "cliente-tienda",
   "version": "0.0.0",
+  "styles": [
+    "node_modules/bootstrap/dist/css/bootstrap.min.css",
+    "src/styles.scss"
+  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,6 +22,9 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.0",
+    "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
